update display in enrollment base on semester

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -13,6 +13,15 @@ body {
   transition: all 0.3s;
   padding: 0.5rem 1rem; /* Adjust the padding to make the navbar shorter */
 }
+
+.color {
+  color: #fabc3f;
+}
+
+.nav-shadow {
+  box-shadow: 0 14px 8px rgba(49, 49, 49, 0.2);
+}
+
 .navbar .image {
   display: flex;
   align-items: center;
