--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -74,7 +74,7 @@ body {
 }
 
 .sidebar .active:hover {
-  background-color: #007bff;
+  background-color: #444;
   padding: 10px;
   border-radius: 5px;
   color: #fff;
